# covscript-dlib

./: .gitignore  CMakeLists.txt  HelloWorld_MrZilinXiao.txt  README.md  dlib.cpp  face_detection.csc  the first request.md
